[package]
name = "hig"
version = "0.1.0"
edition = "2021"
authors = ["Siwei LU <me@siwei.lu>"]
description = "A CLI for Better Git Experience"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
clap = { version = "4.4.2", features = ["derive"] }
dirs = "5.0.1"
git2 = "0.18.0"
octocrab = "0.30.1"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.7.8"
