[package]
name = "hig"
version = "0.1.1"
edition = "2021"
authors = ["Siwei LU <me@siwei.lu>"]
description = "A CLI for Better Git Experience"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
dirs = "5.0.1"
git2 = "0.18.0"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.48"
toml = "0.7.8"

[dev-dependencies]
nanoid = "0.4.0"
tempdir = "0.3.7"
